--- a/note/02.docker.md
+++ b/note/02.docker.md
@@ -442,9 +442,252 @@ docker ps # 查看正在运行的容器
 
 docker特点
 
-- 沙箱机制
+- ==沙箱机制==
 - 隔离机制
 
 - 镜像产生的各个容器之间互不影响，容器的损坏和异常不会影响其他容器
 - 满足了高可用特性，多个app容器不会相互影响
+
+
+
+### 列出镜像 docker images
+
+命令
+
+```sh
+docker images 
+docker image ls
+```
+
+- 镜像体积
+
+  - docker hub 显示的大小是压缩的大小
+
+    - 说明下载后需要解压
+
+  - docker images命令后显示的大小，是本地展开的大小
+
+    - 显示体积并非所有镜像实际占用
+
+    - docker是多层存储，可继承，复用
+
+    - 不同的镜像可以使用相同的层，从而体积会减少
+
+    - docker使用Union FS，相同的层只需要保存一份
+
+      
+
+#### 查看镜像，容器，数据卷所占用的空间
+
+```sh
+root@root:~# docker system df
+TYPE                TOTAL               ACTIVE              SIZE                RECLAIMABLE
+Images              1                   1                   505.8MB             0B (0%)
+Containers          2                   0                   57.56kB             57.56kB (100%)
+Local Volumes       0                   0                   0B                  0B
+Build Cache         0                   0                   0B                  0B
+```
+
+
+
+#### 虚悬镜像
+
+标签为<none>的镜像，表示使用docker pull 或者docker build 的时候，原镜像更新，新旧镜像同名，名称会移动到最新的镜像上，原先的镜像就显示<none>
+
+可以使用命令删除
+
+```sh
+docker image prune
+```
+
+
+
+#### 中间层镜像
+
+一些镜像所依赖的共用镜像，没有标签，只存储一份
+
+添加`-a`参数可以查看
+
+```sh
+docker image ls -a
+```
+
+
+
+#### 列出部分镜像
+
+查询特定的镜像，如查询tomcat的镜像
+
+```sh
+docker image ls tomcat
+```
+
+
+
+### 删除镜像 docker image rm
+
+```sh
+docker image rm 镜像id
+```
+
+
+
+### 创建镜像 docker build
+
+#### Dockerfile
+
+- 使用Dockerfile脚本文件
+
+  - 类似于Linux的sh脚本概念
+  - 文本文件
+  - 每一条指令构建一层
+
+  
+
+- 以tomcat为例搭建一个镜像
+
+  - 创建一个docker目录（在/usr/local/下，一般的镜像规范都是在该目录下）
+  - 在docker目录中创建一个tomcat文件夹，并创建Dockerfile文件
+  - 查看tomcat镜像的内容，注意，不能使用vim在镜像文件中编辑，只能使用echo
+  
+  ```sh
+  root@root:/usr/local/docker/tomcat# docker run -it tomcat bash
+  root@e0af48090585:/usr/local/tomcat# ls -l
+  total 152
+  -rw-r--r-- 1 root root  19534 Jun  4 20:31 BUILDING.txt
+  -rw-r--r-- 1 root root   5407 Jun  4 20:31 CONTRIBUTING.md
+  -rw-r--r-- 1 root root  57011 Jun  4 20:31 LICENSE
+  -rw-r--r-- 1 root root   1726 Jun  4 20:31 NOTICE
+  ```
+  
+  - 找到要修改镜像的文件路径：/usr/local/tomcat/webapps/ROOT（官方的镜像路径都是/usr/local/下的）
+  - Dockerfile的内容
+  
+  ```sh
+  FROM tomcat
+  RUN echo "hello docker" > /usr/local/tomcat/webapps/ROOT/index.html
+  ```
+  
+  - 生成镜像
+  
+  ```sh
+  root@root:/usr/local/docker/tomcat# docker build -t mytomcat:v1 . # 最后的点，表示当前文件夹下的Dockerfile文件
+  Sending build context to Docker daemon  2.048kB
+  Step 1/2 : FROM tomcat # 表示2层构建
+   ---> 5377fd8533c3
+  Step 2/2 : RUN echo "hello docker" > /usr/local/tomcat/webapps/ROOT/index.html
+   ---> Running in 8c065bf11822
+  Removing intermediate container 8c065bf11822
+   ---> 455e10835a9e
+  Successfully built 455e10835a9e
+  Successfully tagged mytomcat:v1
+  
+  root@root:/usr/local/docker/tomcat# docker images
+  REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE
+  mytomcat            v1                  455e10835a9e        41 seconds ago      506MB
+  tomcat              latest              5377fd8533c3        2 days ago          506MB
+  ubuntu              16.04               2a697363a870        4 weeks ago         119MB
+  ```
+  
+  - 尝试删除ROOT目录下的文件，再次构建
+  
+  ```sh
+  FROM tomcat
+  WORKDIR /usr/local/tomcat/webapps/ROOT/ #切换到目录，等价于cd
+  RUN rm -rf *
+  RUN echo "hello docker" > /usr/local/tomcat/webapps/ROOT/index.html
+  ```
+  
+  - 构建运行，注意删除原先的容器
+  
+  ```sh
+  root@root:/usr/local/docker/tomcat# docker build -t mytomcat:v2 .
+  root@root:/usr/local/docker/tomcat# docker run -p 8080:8080 mytomcat:v2
+  ```
+  
+  
+
+##### 命令
+
+###### FROM
+
+- Dockerfile的第一条指令
+- 指定基础镜像，以一个镜像为基础
+  - 有服务类镜像[`nginx`](https://store.docker.com/images/nginx/)、[`redis`](https://store.docker.com/images/redis/)、[`mongo`](https://store.docker.com/images/mongo/)、[`mysql`](https://store.docker.com/images/mysql/)、[`httpd`](https://store.docker.com/images/httpd/)、[`php`](https://store.docker.com/images/php/)、[`tomcat`](https://store.docker.com/images/tomcat/) 等
+  - 有语言类镜像[`node`](https://store.docker.com/images/node)、[`openjdk`](https://store.docker.com/images/openjdk/)、[`python`](https://store.docker.com/images/python/)、[`ruby`](https://store.docker.com/images/ruby/)、[`golang`](https://store.docker.com/images/golang/) 等
+  - 操作系统镜像 [`ubuntu`](https://store.docker.com/images/ubuntu/)、[`debian`](https://store.docker.com/images/debian/)、[`centos`](https://store.docker.com/images/centos/)、[`fedora`](https://store.docker.com/images/fedora/)、[`alpine`](https://store.docker.com/images/alpine/) 等
+  - 空白镜像 `scratch` ，虚拟的概念
+    - 不需要操作系统提供运行时支持
+    - 一切库都包含在可执行文件中
+    - 体积小
+    - go语言很多使用空白镜像
+
+###### RUN
+
+- 运行shell命令
+
+- shell格式：`RUN <命令>`
+
+   ```sh
+    RUN echo '<h1>Hello, Docker!</h1>' > /usr/share/nginx/html/index.html
+   ```
+
+- exec格式：`RUN ["可执行文件", "参数1", "参数2"]`
+
+- 每写一行RUN，构建一层镜像
+
+   - Union FS 是有最大层数限制的
+   - AUFS 不超过127层
+
+   - 错误写法
+
+   ```sh
+   FROM debian:jessie
+   
+   RUN apt-get update
+   RUN apt-get install -y gcc libc6-dev make
+   RUN wget -O redis.tar.gz "http://download.redis.io/releases/redis-3.2.5.tar.gz"
+   RUN mkdir -p /usr/src/redis
+   RUN tar -xzf redis.tar.gz -C /usr/src/redis --strip-components=1
+   RUN make -C /usr/src/redis
+   RUN make -C /usr/src/redis install
+   ```
+
+   - 正确写法
+
+   ```sh
+   FROM debian:jessie
+   
+   RUN buildDeps='gcc libc6-dev make' \
+       && apt-get update \
+       && apt-get install -y $buildDeps \
+       && wget -O redis.tar.gz "http://download.redis.io/releases/redis-3.2.5.tar.gz" \
+       && mkdir -p /usr/src/redis \
+       && tar -xzf redis.tar.gz -C /usr/src/redis --strip-components=1 \
+       && make -C /usr/src/redis \
+       && make -C /usr/src/redis install
+   ```
+
+
+
+#### 构建镜像
+
+注意：RUN命令会启动一个容器，然后做出修改后删除该容器并构建该层镜像
+
+```bash
+docker build [选项] <上下文路径/URL/->
+
+root@root:/usr/local/docker/tomcat# docker build -t mytomcat:v1 . # 最后的点，表示当前文件夹下的Dockerfile文件
+Sending build context to Docker daemon  2.048kB
+Step 1/2 : FROM tomcat # 表示2层构建
+ ---> 5377fd8533c3
+Step 2/2 : RUN echo "hello docker" > /usr/local/tomcat/webapps/ROOT/index.html
+ ---> Running in 8c065bf11822  # 启动一个容器，修改之后
+Removing intermediate container 8c065bf11822 # 关闭这个容器
+ ---> 455e10835a9e # 生成一层镜像文件
+Successfully built 455e10835a9e
+Successfully tagged mytomcat:v1
+```
+
+指定了最终镜像的名称 `-t mytomcat:v1`
 
