--- a/note/02.docker.md
+++ b/note/02.docker.md
@@ -327,7 +327,7 @@ Registry Mirrors:
 
 
 
-## 镜像命令
+## 镜像操作
 
 Docker 运行容器前需要本地存在对应的镜像，如果本地不存在该镜像，Docker 会从镜像仓库下载该镜像。
 
@@ -490,7 +490,7 @@ Build Cache         0                   0                   0B                  
 
 
 
-#### 虚悬镜像
+#### 虚悬镜像 
 
 标签为<none>的镜像，表示使用docker pull 或者docker build 的时候，原镜像更新，新旧镜像同名，名称会移动到最新的镜像上，原先的镜像就显示<none>
 
@@ -534,13 +534,15 @@ docker image rm 镜像id
 
 ### 创建镜像 docker build
 
+
+
 #### Dockerfile
 
 - 使用Dockerfile脚本文件
 
   - 类似于Linux的sh脚本概念
   - 文本文件
-  - 每一条指令构建一层
+  - 每一条指令构建一层（FROM，COPY，RUN等）
 
   
 
@@ -670,7 +672,7 @@ docker image rm 镜像id
 
 
 
-#### 构建镜像
+##### 构建镜像
 
 注意：RUN命令会启动一个容器，然后做出修改后删除该容器并构建该层镜像
 
@@ -690,4 +692,578 @@ Successfully tagged mytomcat:v1
 ```
 
 指定了最终镜像的名称 `-t mytomcat:v1`
+
+
+
+##### 构建上下文
+
+- 使用`docker build`的时候最后有一个 `.`
+- 该`.` 就是上下文
+- docker 是C/S架构，在安装docker后，可以发现安装了服务端和客户端
+- 使用`docker build`构建镜像在服务端docker引擎构建，而非客户端
+- 客户端输入构建命令，将路径下的所有内容打包，上传给docker引擎
+- 引擎收到内容后展开，获取需要的文件
+- 那么build输入的`.`是指当前路径下为==上下文路径==，将当前路径下的文件打包给docker引擎
+- 分析命令
+
+```sh
+COPY ./package.json /app/
+```
+
+- 该命令中的./package.json文件指的是上下文路径中的package.json文件，而非本地客户端当前文件夹的文件
+
+- Dockerfile文件默认在构建的当前目录下，也可指定路径`docker build -f /path/to/a/Dockerfile .`
+
+  
+
+##### 其他命令
+
+###### COPY
+
+- 格式
+
+```sh
+COPY <源路径>... <目标路径>
+COPY ["<源路径1>",... "<目标路径>"]
+```
+
+- ==从上下文目录==中的**源路径**的文件拷贝到镜像内的**目标路径**
+  - 通配符规则要满足 Go 的 [`filepath.Match`](https://golang.org/pkg/path/filepath/#Match) 规则
+
+```sh
+COPY package.json /usr/src/app/
+COPY hom* /mydir/
+COPY hom?.txt /mydir/
+```
+
+- 特点
+  - 源文件的各种元数据都会保留。比如读、写、执行权限、文件变更时间等
+  - 目标路径不需要事先创建，如果目录不存在会在复制文件前先行创建缺失目录
+  - 可以是容器内的绝对路径，也可是相对于工作目录的相对路径（工作目录可以用 `WORKDIR`指令来指定）
+
+###### ADD
+
+- 性质与COPY相似
+
+- 增加的功能
+
+  - `<源路径>`可以是一个URL，Docker引擎会去下载链接的文件到`<目标路径>`
+
+    - 设置默认权限600
+    - 如果需要修改权限，需要RUN进行修改
+    - 如果下载的是压缩包，需要RUN进行解压
+    - 一般不推荐使用，而是先通过RUN wget下载后，解压，权限处理完成后ADD
+
+  - `<源路径>`是一个tar文件，压缩格式为 `gzip`, `bzip2` 以及 `xz` ，`ADD`会自动解压到`<目标路径>`
+
+    - 很实用，可以将官方镜像进行解压
+
+    ```sh
+    FROM scratch
+    ADD ubuntu-xenial-core-cloudimg-amd64-root.tar.gz /
+    ...
+    ```
+
+    - 如果不希望进行解压，那么就不能使用`ADD`
+
+- 适合的场景：带有压缩包的源文件需要自动解压缩（解压缩后会删除原压缩包）
+
+  - ADD包含了更多复杂的功能，行为不清晰，操作场景相同时推荐用COPY操作
+
+
+
+###### WORKDIR
+
+```sh
+WORKDIR <工作目录路径>
+```
+
+- 指定工作路径，以后==各层的当前目录==修改为指定的目录
+- 目录不存在会创建目录
+
+错误示范
+
+```sh
+RUN cd /app
+RUN echo "hello" > world.txt
+```
+
+- Dockerfile不等同于shell
+- 每一个RUN会启动一个容器，那么cd只是RUN的那层容器内的操作，第二个RUN又是一个容器了
+
+
+
+###### EXPOSE
+
+```sh
+EXPOSE <端口1>[<端口2>...]
+```
+
+- 声明运行时，容器提供服务的守护端口
+- 注意：运行时，不会因为声明就开启这个端口的服务
+- 好处
+  - 方便使用者配置映射
+  - 使用`docker run -P`时会自动映射`EXPOSE`端口（注意是P）
+
+- 与`-p <宿主端口>:<容器端口>`区分
+  - `EXPOSE`只是声明容器打算使用什么端口，不会自动在宿主进行端口映射
+
+###### CMD
+
+- 格式
+
+```sh
+CMD <命令>
+CMD ["可执行文件", "参数1", "参数2"...] # 推荐使用
+```
+
+- Docker容器不是虚拟机，是一个进程，进程在启动的时候可添加初始参数
+- 用于指定默认容器主进程启动的命令
+- ubuntu镜像默认的CMD是/bin/bash，那么执行如下命令
+
+```sh
+CMD echo $HOME
+# 在执行时会转变为
+CMD [ "sh", "-c", "echo $HOME" ]
+# shell命令的环境变量可以使用，会被sh解析处理
+```
+
+- 更换默认CMD命令
+
+```sh
+docker run -it ubuntu cat /etc/os-release # 将/bin/bash替换为 cat /etc/os-release
+```
+
+- Docker容器中的程序都是前台执行的，不能后台执行
+
+```sh
+CMD service nginx start # 执行失败，会直接退出容器进程，会被理解为如下命令
+CMD [ "sh", "-c", "service nginx start"] # 执行失败，正确的应该执行nginx的命令
+CMD ["nginx", "-g", "daemon off;"] # nginx在前台执行
+```
+
+
+
+###### ENV
+
+
+
+###### ENTRYPOINT
+
+
+
+#### 示例：app解压到tomcat
+
+部署一个war包到tomcat，设置80端口启动
+
+
+
+##### 尝试1
+
+修改Dockerfile拷贝xxx.zip到ROOT下并解压
+
+Dockerfile
+
+```sh
+FROM tomcat
+
+COPY xxx.zip /usr/local/tomcat/webapps/ROOT
+RUN unzip xxx.zip
+```
+
+编译：失败了，找不到相应的文件
+
+```sh
+root@root:/usr/local/docker/tomcat# docker build -t xxx .
+Sending build context to Docker daemon  29.18kB
+Step 1/3 : FROM tomcat
+ ---> 5377fd8533c3
+Step 2/3 : COPY xxx.zip /usr/local/tomcat/webapps/ROOT
+ ---> a711e95945d8
+Step 3/3 : RUN unzip xxx.zip
+ ---> Running in a3deab6a19cc
+unzip:  cannot find or open xxx.zip, xxx.zip.zip or xxx.zip.ZIP. # 路径不对，此时依然是上下文路径
+The command '/bin/sh -c unzip xxx.zip' returned a non-zero code: 9
+```
+
+- 注意上下文路径
+
+  - COPY后工作路径仍然是/usr/local/tomcat，因此在此文件夹下是找不到的
+
+  - docker是一层一层镜像构建
+
+  - 需要使用WORKDIR切换路径
+
+    
+
+- 注意编译失败会产生虚悬镜像
+
+  - ==RUN命令时会创建容器，如果该命令顺利执行，容器会删除，否则会保留==
+
+  - 执行删除虚悬镜像时，需要删除RUN运行失败的容器，否则删除不了
+
+  - 最后执行docker image prune，去除虚悬镜像
+
+    
+
+##### 尝试2
+
+切换路径在COPY，解压
+
+```sh
+root@root:/usr/local/docker/tomcat# cat Dockerfile 
+FROM tomcat
+
+WORKDIR /usr/local/tomcat/webapps/ROOT # 切换工作目录
+RUN rm -rf * # 先删除ROOT中的其他文件，防止重名
+COPY xxx.zip .
+RUN unzip xxx.zip
+RUN rm -f xxx.zip # 去除已压缩的文件
+WORKDIR /usr/local/tomcat # 将工作目录切换回来
+```
+
+##### 尝试3
+
+使用ADD命令，将tar包解压
+
+如果使用ADD命令，那么需要将zip包打成tar.gz文件
+
+```sh
+FROM tomcat
+
+WORKDIR /usr/local/tomcat/webapps/ROOT # 切换工作目录
+RUN rm -rf * # 先删除ROOT中的其他文件，防止重名
+
+ADD xxx.tar.gz /usr/local/tomcat/webapps/ROOT #包含了COPY 解压，删除压缩原文件的功能
+
+WORKDIR /usr/local/tomcat # 将工作目录切换回来
+```
+
+
+
+##### 尝试4
+
+使用8080端口启动服务
+
+```sh
+docker run -p 8080:8080 tomcat
+```
+
+配置8080暴露端口
+
+```sh
+FROM tomcat
+
+WORKDIR /usr/local/tomcat/webapps/ROOT
+RUN rm -rf *
+COPY xxx.zip .
+RUN unzip xxx.zip
+RUN rm -f xxx.zip
+WORKDIR /usr/local/tomcat
+EXPOSE 8990 # 此处容器的端口
+```
+
+运行：可以看到服务器配置的随机端口访问8990端口
+
+==必须通过宿主机访问，宿主机隔离，安全性提升==
+
+```sh
+root@root:/usr/local/docker/tomcat# docker run -P xxx
+root@root:~# docker ps 
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS                                              NAMES
+5cb38eb699ff        xxx                 "catalina.sh run"   10 seconds ago      Up 9 seconds        0.0.0.0:32771->8080/tcp, 0.0.0.0:32770->8990/tcp   nostalgic_easle
+```
+
+
+
+## 容器操作
+
+- docker ps -a 
+  
+  - 等同于docker container ls -a
+  
+- docker restart containerId
+  
+  - docker restart containerName
+  
+- docker stop containerId
+  
+  - docker stop containerName
+  
+- docker run -p 8080:8080 --name myTomcat tomcat
+  - --name 后添加容器名称
+  - 最后是镜像名
+  
+- docker run -p 8080:8080 --name myTomcat -d tomcat
+  - -d表示守护态运行
+  - 采用这个命令可以启动多个容器
+
+- docker rm containerId
+
+  - docker rm containerName
+  - docker rm -f containerId 强制删除
+
+- docker exec -it containerId bash
+
+  - 交互的方式进入已经启动的容器
+  
+- docker container ls -a 
+  
+- 显示所有容器
+  
+- docker container prune
+  
+- 清除所有处于终止状态的容器
+  
+
+  
+
+### 启动容器 
+
+#### 新建并启动 docker run
+
+>  基于镜像新建一个容器并启动
+
+```sh
+$ docker run ubuntu:14.04 /bin/echo 'Hello world'
+Hello world
+$ docker run -t -i ubuntu:14.04 /bin/bash
+root@af8bae53bdd3:/#
+```
+
+`-t` 选项让Docker分配一个伪终端（pseudo-tty）并绑定到容器的标准输入上， `-i` 则让容器的标准输入保持打开
+
+
+
+执行流程
+
+- 检查本地是否存在指定的镜像，不存在就从公有仓库下载
+- 利用镜像创建并启动一个容器
+- 分配一个文件系统，并在只读的镜像层外面挂载一层可读写层
+- 从宿主主机配置的网桥接口中桥接一个虚拟接口到容器中去
+- 从地址池配置一个 ip 地址给容器
+- 执行用户指定的应用程序
+- 执行完毕后容器被终止
+
+
+
+#### 启动已终止容器 docker container start
+
+> 将终止状态`stoped`的容器启动
+
+直接将一个已经终止的容器启动运行
+
+
+
+### 终止容器
+
+- 使用`docker container stop`终止容器
+- 在容器启动后`exit`或者`ctrl+d`退出终端
+
+- 使用`docker container ls -a`查看容器状态
+- 使用`docker container start`启动终止的容器
+- 使用`docker container restart`重启容器
+
+
+
+### 进入容器
+
+- 使用`-d`参数，容器启动后会进入后台	
+
+某些时候需要进入容器进行操作，包括使用 `docker attach` 命令或 `docker exec` 命令，推荐大家使用 `docker exec` 命令，原因会在下面说明。
+
+
+
+#### `attach` 命令
+
+`docker attach` 是 Docker 自带的命令。下面示例如何使用该命令。
+
+```bash
+$ docker run -dit ubuntu
+243c32535da7d142fb0e6df616a3c3ada0b8ab417937c853a9e1c251f499f550
+
+$ docker container ls
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES
+243c32535da7        ubuntu:latest       "/bin/bash"         18 seconds ago      Up 17 seconds                           nostalgic_hypatia
+
+$ docker attach 243c
+root@243c32535da7:/#
+```
+
+*注意：* 如果从这个 stdin 中 exit，会导致容器的停止。
+
+
+
+#### `exec` 命令
+
+##### -i -t 参数
+
+`docker exec` 后边可以跟多个参数，这里主要说明 `-i` `-t` 参数。
+
+只用 `-i` 参数时，由于没有分配伪终端，界面没有我们熟悉的 Linux 命令提示符，但命令执行结果仍然可以返回。
+
+当 `-i` `-t` 参数一起使用时，则可以看到我们熟悉的 Linux 命令提示符。
+
+```bash
+$ docker run -dit ubuntu
+69d137adef7a8a689cbcb059e94da5489d3cddd240ff675c640c8d96e84fe1f6
+
+$ docker container ls
+CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS              PORTS               NAMES
+69d137adef7a        ubuntu:latest       "/bin/bash"         18 seconds ago      Up 17 seconds                           zealous_swirles
+
+$ docker exec -i 69d1 bash
+ls
+bin
+boot
+dev
+...
+
+$ docker exec -it 69d1 bash
+root@69d137adef7a:/#
+```
+
+
+
+如果从这个 stdin 中 exit，不会导致容器的停止。这就是为什么推荐大家使用 `docker exec` 的原因。
+
+更多参数说明请使用 `docker exec --help` 查看
+
+
+
+### 守护态运行
+
+run 后添加-d，等价于后台运行容器，当前线程操作不会中断已经启动的容器
+
+
+
+## 数据卷
+
+`数据卷` 是一个可供一个或多个容器使用的特殊目录，它绕过 UFS，可以提供很多有用的特性：
+
+- `数据卷` 可以在容器之间共享和重用
+- 对 `数据卷` 的修改会立马生效
+- 对 `数据卷` 的更新，不会影响镜像
+- `数据卷` 默认会一直存在，即使容器被删除
+
+> 注意：`数据卷` 的使用，类似于 Linux 下对目录或文件进行 mount，镜像中的被指定为挂载点的目录中的文件会隐藏掉，能显示看的是挂载的 `数据卷`。
+
+
+
+通常情况下
+
+- docker容器中的数据是非持久化的，容器消失，数据消失
+- docker容器和底层的IO交互通过UFS进行，UFS会在本地存储一份，然后将本地文件写入到容器中，就有了重复写的问题。
+
+![7](resource/img/docker/7.png)
+
+数据卷的方式
+
+- 绕过UFS
+- 多个容器可共享数据卷
+
+![img](resource/img/docker/8.png)
+
+
+
+### 示例
+
+以tomcat为例，使用宿主机目录代替容器目录
+
+```sh
+root@root:~# docker run -p 8080:8080 --name mytomcat -d -v /usr/local/docker/tomcat/ROOT:/usr/local/tomcat/webapps/ROOT tomcat
+360f8b754703a30368332e2df2ba8f6aa6531122e6bde623c853619a14e77b07
+
+-d 表示后台运行
+-v 表示数据卷挂载，第一个是宿主机目录，第二个是容器内目录
+```
+
+
+
+### 命令
+
+- `docker run -p 8080:8080 --name mytomcat -d -v <宿主目录>:<对应的容器目录> tomcat`
+  - 使用-v，在启动容器的时候进行挂载
+  - ==注意：如果宿主目录不存在，-v 命令会自动创建文件夹==
+- 
+
+
+
+## 构建MySQL
+
+配合数据卷，构建MySQL
+
+- 下载mysql镜像`docker pull mysql`
+  - 当前latest版本是8.0
+    - 取消了MyISAM引擎，不支持事务
+    - InnoDB 支持事务，效率提升了
+    - 分布式系统，现在数据库（5.7 支持nosql）的分布式都是第三方
+    - 8.0支持原生数据库分布式解决方案
+
+- 下载msql5.7.22版本，`docker pull mysql:5.7.22`
+- 运行mysql镜像
+
+```sh
+docker run -p 3306:3306 --name mysql -d \
+-v /usr/local/docker/mysql/conf:/etc/mysql \
+-v /usr/local/docker/mysql/logs:/var/log/mysql \
+-v /usr/local/docker/mysql/data:/var/lib/mysql \
+-e MYSQL_ROOT_PASSWORD=123456 \ # 设置环境变量
+mysql
+# 注意最新版本的启动方式有区别,上面的命令启动最新版本是失败的
+
+docker run -p 3306:3306 --name mysql -d \
+-v /usr/local/docker/mysql/conf:/etc/mysql \
+-v /usr/local/docker/mysql/logs:/var/log/mysql \
+-v /usr/local/docker/mysql/data:/var/lib/mysql \
+-e MYSQL_ROOT_PASSWORD=123456 \
+mysql:5.7.22
+```
+
+- 问题：mysql导入脚本的 默认设置是16M，但是配置文件在容器内部，如何处理
+
+  - 需要复制配置文件到外部conf文件，用数据卷的方式给mysql读取，达到外部自定义配置的目的
+  - 运行一个没有配置数据卷关联/etc/mysql目录的数据库容器
+  - 复制容器内部文件操作
+
+  ```sh
+  docker cp ecd9a5c25ba1:/etc/mysql /usr/local/docker/mysql/conf
+  # 这里是容器id，也可以是容器名称，注意将conf下mysql文件夹的内容全部拷贝到conf中
+  root@root:/usr/local/docker/mysql/conf/mysql# mv *.* ..
+  root@root:/usr/local/docker/mysql/conf# rm -rf mysql
+  ```
+
+  - 修改配置文件
+
+  ```sh
+  root@root:/usr/local/docker/mysql/conf/mysql.conf.d# vim mysqld.cnf 
+  [mysqld]
+  pid-file        = /var/run/mysqld/mysqld.pid
+  socket          = /var/run/mysqld/mysqld.sock
+  datadir         = /var/lib/mysql
+  #log-error      = /var/log/mysql/error.log
+  # By default we only accept connections from localhost
+  #bind-address   = 127.0.0.1
+  max_allowed_packet = 128M # 此处配置
+  ```
+
+  - 重启容器
+
+
+
+## 项目容器化部署
+
+```sh
+docker run -p 8080:8080 
+--name myshop \
+-v /usr/local/docker/tomcat/ROOT/:/usr/local/tomcat/webapps/ROOT \
+-d tomcat
+```
+
+查看日志
+
+```sh
+docker logs myshop 
+docker logs -f myshop # 等价于tail -f
+```
 
