--- a/note/00.准备.md
+++ b/note/00.准备.md
@@ -196,3 +196,20 @@ spring 5.x 支持异步非阻塞请求
 小A吃饭吃到一半，电话来了，小A停了下来接了电话，接完后继续吃饭。**支持并发**
 
 小A吃饭吃到一半，电话来了，小A一边打电话一边吃饭。**支持并行**
+
+
+
+启动顺序
+
+1.服务注册与发现
+
+2.分布式配置中心
+
+3.服务提供者
+
+4.服务消费者
+
+5.api网关
+
+
+
