--- a/note/07.spring-boot.md
+++ b/note/07.spring-boot.md
@@ -133,6 +133,8 @@ logging:
 
 ## 整合Mybatis
 
+### pom
+
 添加依赖
 
 ```sh
@@ -151,7 +153,7 @@ logging:
 
 
 
-配置yml
+### yml
 
 ```sh
 spring:
@@ -170,7 +172,9 @@ spring:
 
 
 
-配置tk.mybatis
+### 插件
+
+#### 配置tk.mybatis
 
 ```sh
 <dependency>
@@ -180,7 +184,7 @@ spring:
 </dependency>
 ```
 
-配置分页插件
+#### 配置分页插件
 
 PageHelper 是 Mybatis 的分页插件，支持多数据库、多数据源。可以简化数据库的分页查询操作，整合过程也极其简单，只需引入依赖即可
 
@@ -192,7 +196,7 @@ PageHelper 是 Mybatis 的分页插件，支持多数据库、多数据源。可
 </dependency>
 ```
 
-配置自动生成mapper插件
+#### 配置自动生成mapper插件
 
 ```sh
     <plugins>
@@ -577,4 +581,102 @@ mvn mybatis-generator:generate
 ```
 
 - 注意：生成的entity中的表名称多了个点，需要去除
+
+
+
+## 整合thymeleaf
+
+### pom
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-web</artifactId>
+</dependency>
+```
+
+### yml
+
+```yaml
+spring:
+  thymeleaf:
+    cache: false # 开发时关闭缓存,不然没法看到实时页面
+    mode: LEGACYHTML5 # 用非严格的 HTML 需要添加 nekohtml 依赖
+    encoding: UTF-8
+    servlet:
+      content-type: text/html
+```
+
+### html
+
+在resources/templates文件夹下创建index.html
+
+```html
+<!--用于支持thymeleaf引擎-->
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <div>
+        <span>访问model：</span><span th:text="${person.name}"></span>
+    </div>
+    <div>
+        <span>访问列表</span>
+        <table>
+            <thead>
+                <tr>
+                    <th>姓名</th>
+                    <th>年龄</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="item : ${people}">
+                    <td th:text="${item.name}"></td>
+                    <td th:text="${item.age}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
+```
+
+### controller
+
+```java
+package com.stt.spring.boot.thymeleaf.controller;
+
+import com.google.common.collect.Lists;
+import com.stt.spring.boot.thymeleaf.entity.PersonBean;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+
+@Controller
+@RequestMapping(value = "thymeleaf")
+public class IndexController {
+
+	@RequestMapping(value = "index",method = RequestMethod.GET)
+	public String index(Model model){
+		model.addAttribute("person",
+				PersonBean.builder().name("stt").age(19).build());
+
+		model.addAttribute("people", Lists.newArrayList(
+				PersonBean.builder().name("people1").age(10).build(),
+				PersonBean.builder().name("people2").age(12).build(),
+				PersonBean.builder().name("people3").age(13).build()
+		));
+		return "index";
+	}
+}
+```
 
