--- a/note/08.spring-cloud-netflix.md
+++ b/note/08.spring-cloud-netflix.md
@@ -891,6 +891,8 @@ eureka:
 
 通过 `@FeignClient("服务名")` 注解来指定调用哪个服务。代码如下：
 
+注意，`@RequestParam` 中的`value`必须要赋值
+
 ```java
 package com.funtl.hello.spring.cloud.web.admin.feign.service;
 
