--- a/note/19-0.kubernetes.md
+++ b/note/19-0.kubernetes.md
@@ -100,7 +100,7 @@ Kubernetes 的目标是促进完善组件和工具的生态系统，以减轻应
 
 ## 安装
 
-本次安装采用 Ubuntu Server X64 18.04 LTS 版本安装 kubernetes 集群环境，集群节点为 1 主 2 从模式，此次对虚拟机会有些基本要求，如下：
+本次安装采用 ==Ubuntu Server X64 18.04 LTS== 版本安装 kubernetes 集群环境，集群节点为 1 主 2 从模式，此次对虚拟机会有些基本要求，如下：
 
 - OS：Ubuntu Server X64 18.04 LTS（16.04 版本步骤相同，再之前则不同）
 - CPU：最低要求，1 CPU 2 核
@@ -245,23 +245,10 @@ sudo apt-get -y install docker-ce
 ```shell
 docker version
 Client:
- Version:           18.09.6
- API version:       1.39
- Go version:        go1.10.8
- Git commit:        481bc77
- Built:             Sat May  4 02:35:57 2019
- OS/Arch:           linux/amd64
- Experimental:      false
+...
 
 Server: Docker Engine - Community
- Engine:
-  Version:          18.09.6
-  API version:      1.39 (minimum version 1.12)
-  Go version:       go1.10.8
-  Git commit:       481bc77
-  Built:            Sat May  4 01:59:36 2019
-  OS/Arch:          linux/amd64
-  Experimental:     false
+...
 ```
 
 
@@ -269,6 +256,8 @@ Server: Docker Engine - Community
 #### 配置加速器
 
 对于使用 **systemd** 的系统，请在 `/etc/docker/daemon.json` 中写入如下内容（如果文件不存在请新建该文件）
+
+https://cr.console.aliyun.com/cn-hangzhou/instances/mirrors
 
 ```json
 {
@@ -453,7 +442,7 @@ systemctl enable kubelet && systemctl start kubelet
 安装 kubernetes 主要是安装它的各个镜像，而 kubeadm 已经为我们集成好了运行 kubernetes 所需的基本镜像。但由于国内的网络原因，在搭建环境时，无法拉取到这些镜像。此时我们只需要修改为阿里云提供的镜像服务即可解决该问题。
 
 ```bash
-# 在/usr/local/docker/kubernetes 目录下导出配置文件
+# 在自定义文件夹/usr/local/docker/kubernetes 目录下导出配置文件
 root@kubernetes-master:/usr/local/docker/kubernetes# kubeadm config print init-defaults --kubeconfig ClusterConfiguration > kubeadm.yml
 root@kubernetes-master:/usr/local/docker/kubernetes# ll
 total 12
@@ -550,11 +539,14 @@ registry.aliyuncs.com/google_containers/pause                     3.1           
 
 ## 用 kubeadm 搭建 kubernetes集群
 
+
+
 ### 安装kubernetes 主节点
 
 执行以下命令初始化主节点，该命令指定了初始化时需要使用的配置文件，其中添加 `--experimental-upload-certs` 参数可以在后续执行加入节点时自动分发证书文件。追加的 `tee kubeadm-init.log` 用以输出日志。
 
 ```bash
+# 初始化，自动分发证书，输出日志
 kubeadm init --config=kubeadm.yml --experimental-upload-certs | tee kubeadm-init.log
 
 # 安装成功则会有如下输出
@@ -751,6 +743,10 @@ This node has joined the cluster:
 
 Run 'kubectl get nodes' on the control-plane to see this node join the cluster.
 ```
+
+
+
+#### 关于token过期
 
 - token
   - 可以通过安装 master 时的日志查看 token 信息
@@ -982,10 +978,11 @@ netplan apply
 - 方式2
 
   - `vi /etc/systemd/resolved.conf`
-
-  - 把 DNS 取消注释，添加 DNS，保存退出，重启即可
-
-  ![img](resource/img/kubernetes/8.png)
+- 把 DNS 取消注释，添加 DNS，保存退出，重启即可
+  
+```sh
+  DNS=114.114.114.114
+  ```
 
 
 
