--- a/note/12.spring-cloud-demo-itoken/08-2.swagger.md
+++ b/note/12.spring-cloud-demo-itoken/08-2.swagger.md
@@ -160,6 +160,15 @@ Swagger 通过注解表明该接口会生成文档，包括接口名、请求方
 
 
 
+## paramType
+
+paramType：表示参数放在哪个地方
+    header-->请求参数的获取：@RequestHeader(代码中接收注解)
+    query-->请求参数的获取：@RequestParam(代码中接收注解)
+    path（用于restful接口）-->请求参数的获取：@PathVariable(代码中接收注解)
+    body-->请求参数的获取：@RequestBody(代码中接收注解)
+    form（不常用
+
 ## 访问
 
 访问地址：http://ip:port/swagger-ui.html
